enhance memory usage using buffer, or avoiding alloc