@@ -126,7 +126,7 @@ public class AnsiPrintStream extends FilterPrintStream { // expected diff with A
                 buffer[pos++] = (byte) data;
                 if (!('0' <= data && data <= '9')) {
                     String strValue = new String(buffer, startOfValue, (pos - 1) - startOfValue, Charset.defaultCharset());
-                    Integer value = new Integer(strValue);
+                    Integer value = Integer.valueOf(strValue);
                     options.add(value);
                     if (data == ';') {
                         state = LOOKING_FOR_NEXT_ARG;
@@ -163,7 +163,7 @@ public class AnsiPrintStream extends FilterPrintStream { // expected diff with A
                 buffer[pos++] = (byte) data;
                 if (';' == data) {
                     String strValue = new String(buffer, startOfValue, (pos - 1) - startOfValue, Charset.defaultCharset());
-                    Integer value = new Integer(strValue);
+                    Integer value = Integer.valueOf(strValue);
                     options.add(value);
                     startOfValue = pos;
                     state = LOOKING_FOR_OSC_PARAM;
